service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  springboot-app-service
  namespace: demo
spec:
  type: NodePort
  selector:
    app: springboot-app
  ports:
  - nodePort: 30082
    port: 8000
    targetPort: 8000
